[gd_scene load_steps=32 format=3 uid="uid://b1r6b3wnoi0bj"]

[ext_resource type="PackedScene" uid="uid://d3yydpuearmk3" path="res://scenes/enemy/enemy.tscn" id="1_fjeen"]
[ext_resource type="Texture2D" uid="uid://b5ejbs414fujd" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/11-Attack Effect/Attack Effect 01.png" id="2_7pl3u"]
[ext_resource type="Script" path="res://scripts/enemy/fierce_tooth.gd" id="2_po6v4"]
[ext_resource type="Texture2D" uid="uid://dlssbtb0ojyxm" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/11-Attack Effect/Attack Effect 02.png" id="3_ly251"]
[ext_resource type="SpriteFrames" uid="uid://cksgp42htvfmp" path="res://assets/fierce_tooth_spriteframes.tres" id="3_yfduw"]
[ext_resource type="Texture2D" uid="uid://bl1egpeavlndm" path="res://assets/Treasure Hunters/The Crusty Crew/Sprites/Fierce Tooth/11-Attack Effect/Attack Effect 03.png" id="4_mohrv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j846h"]
radius = 7.0
height = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_o5yfo"]
radius = 14.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u1o8u"]
size = Vector2(67, 23)

[sub_resource type="Animation" id="Animation_ohc78"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharAnimSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_31wo5"]
resource_name = "anticipation"
length = 0.30001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharAnimSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"anticipation"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharAnimSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_qm370"]
resource_name = "attack"
length = 0.50001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharAnimSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharAnimSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_0bqb3"]
resource_name = "dead_ground"
length = 0.40001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharAnimSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"dead_ground"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharAnimSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_xvmj8"]
resource_name = "dead_hit"
length = 0.40001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharAnimSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"dead_hit"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharAnimSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_bjjtj"]
resource_name = "hit"
length = 0.40001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharAnimSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hit"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharAnimSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_82dn0"]
resource_name = "idle"
length = 0.80001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharAnimSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharAnimSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_y4rja"]
resource_name = "run"
length = 0.60001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharAnimSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharAnimSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4yefp"]
_data = {
"RESET": SubResource("Animation_ohc78"),
"anticipation": SubResource("Animation_31wo5"),
"attack": SubResource("Animation_qm370"),
"dead_ground": SubResource("Animation_0bqb3"),
"dead_hit": SubResource("Animation_xvmj8"),
"hit": SubResource("Animation_bjjtj"),
"idle": SubResource("Animation_82dn0"),
"run": SubResource("Animation_y4rja")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fir3r"]
animation = &"anticipation"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_skybf"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vg7c1"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0wxa2"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_o4lcf"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hxp6x"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1j8tp"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4bxl0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ua5xx"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q34r8"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_005k4"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_c6ktc"]
states/Start/position = Vector2(194, 100)
states/anticipation/node = SubResource("AnimationNodeAnimation_fir3r")
states/anticipation/position = Vector2(421, -67)
states/attack/node = SubResource("AnimationNodeAnimation_skybf")
states/attack/position = Vector2(606, -67)
states/idle/node = SubResource("AnimationNodeAnimation_vg7c1")
states/idle/position = Vector2(421, 100)
states/run/node = SubResource("AnimationNodeAnimation_0wxa2")
states/run/position = Vector2(668, 100)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_o4lcf"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_hxp6x"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_1j8tp"), "idle", "anticipation", SubResource("AnimationNodeStateMachineTransition_4bxl0"), "anticipation", "idle", SubResource("AnimationNodeStateMachineTransition_ua5xx"), "anticipation", "attack", SubResource("AnimationNodeStateMachineTransition_q34r8"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_005k4")]
graph_offset = Vector2(133, -116)

[sub_resource type="SpriteFrames" id="SpriteFrames_k1xws"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7pl3u")
}, {
"duration": 1.0,
"texture": ExtResource("3_ly251")
}, {
"duration": 1.0,
"texture": ExtResource("4_mohrv")
}],
"loop": false,
"name": &"attack_fx",
"speed": 10.0
}]

[node name="fierce_tooth_v2" instance=ExtResource("1_fjeen")]
z_index = 98
script = ExtResource("2_po6v4")

[node name="CharAnimSprite2D" parent="." index="0"]
position = Vector2(0, -13)
sprite_frames = ExtResource("3_yfduw")
animation = &"idle"
frame = 1

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_j846h")

[node name="hitbox" parent="." index="2"]
position = Vector2(-4, -12)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" parent="hitbox" index="0"]
shape = SubResource("CircleShape2D_o5yfo")

[node name="detectionZone" parent="." index="3"]
position = Vector2(-10.5, -12)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" parent="detectionZone" index="0"]
shape = SubResource("RectangleShape2D_u1o8u")

[node name="RayCastRight" parent="." index="4"]
position = Vector2(0, -12)

[node name="RayCastLeft" parent="." index="5"]
position = Vector2(0, -12)

[node name="AnimationPlayer" parent="." index="6"]
libraries = {
"": SubResource("AnimationLibrary_4yefp")
}

[node name="AnimationTree" parent="." index="7"]
tree_root = SubResource("AnimationNodeStateMachine_c6ktc")

[node name="FxSprite2D" parent="." index="8"]
visible = false
position = Vector2(-25, -17)
sprite_frames = SubResource("SpriteFrames_k1xws")
animation = &"attack_fx"

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="body_entered" from="detectionZone" to="." method="_on_detection_zone_body_entered"]
[connection signal="body_exited" from="detectionZone" to="." method="_on_detection_zone_body_exited"]
